Replace URLs with URIs