@@ -6,9 +6,11 @@ import logger.Logger;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -27,11 +29,11 @@ public class Worker implements Callable<Void> {
     private static final String saveToPath = "/Projects/tij/";
     private static final Logger logger = Logger.getLogger(GuiLogger.class);
 
-    private final URL urlToParse;
-    private final ConcurrentMap<URL, List<URL>> graph;
+    private final URI urlToParse;
+    private final ConcurrentMap<URI, List<URI>> graph;
     private final ExecutorService executorService;
 
-    public Worker(URL url, ConcurrentMap<URL, List<URL>> graph, ExecutorService executorService) {
+    public Worker(URI url, ConcurrentMap<URI, List<URI>> graph, ExecutorService executorService) {
         this.urlToParse = url;
         this.graph = graph;
         this.executorService = executorService;
@@ -50,31 +52,31 @@ public class Worker implements Callable<Void> {
         return null;
     }
 
-    private String downloadAsset(URL url) throws IOException {
+    private String downloadAsset(URI url) throws IOException {
         StringBuilder content = new StringBuilder();
 
-        URLConnection urlConnection = url.openConnection();
-        try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(urlConnection.getInputStream()))) {
+        URLConnection urlConnection = new URL(url.toString()).openConnection();
+        try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(urlConnection.getInputStream(), Charset.forName("UTF-8")))) {
             String line;
             while ((line = bufferedReader.readLine()) != null) {
                 content.append(line).append("\n");
             }
         } catch (IOException e) {
-            logger.error(String.format("Error when downloading an asset: %s\n", e.getMessage()));
+            logger.error(String.format("Error when downloading an asset: %s%n", e.getMessage()));
             throw e;
         }
 
         return content.toString();
     }
 
-    private void parseAsset(URL url, String asset) throws InterruptedException {
-        List<URL> allFoundUrls = new ArrayList<>();
-        List<URL> notVisitedUrls = new ArrayList<>();
+    private void parseAsset(URI url, String asset) throws InterruptedException {
+        List<URI> allFoundUrls = new ArrayList<>();
+        List<URI> notVisitedUrls = new ArrayList<>();
         Pattern pattern = Pattern.compile("href=\"(.*?)\"", Pattern.CASE_INSENSITIVE);
         Matcher urlMatcher = pattern.matcher(asset);
 
         while (urlMatcher.find()) {
-            Optional<URL> foundUrl = validateUrl(url, asset.substring(urlMatcher.start(1), urlMatcher.end(1)));
+            Optional<URI> foundUrl = validateUrl(url, asset.substring(urlMatcher.start(1), urlMatcher.end(1)));
 
             foundUrl.ifPresent(u -> {
                 logger.debug(String.format("Found valid url: %s\n", foundUrl));
@@ -90,32 +92,32 @@ public class Worker implements Callable<Void> {
         executeRecursiveTasks(notVisitedUrls);
     }
 
-    private void executeRecursiveTasks(List<URL> notVisitedUrls) throws InterruptedException {
+    private void executeRecursiveTasks(List<URI> notVisitedUrls) throws InterruptedException {
         List<Worker> workers = notVisitedUrls.stream()
                 .map(url -> new Worker(url, graph, executorService))
                 .collect(Collectors.toList());
         executorService.invokeAll(workers);
     }
 
-    private void saveAsset(URL url, String asset) throws IOException {
+    private void saveAsset(URI url, String asset) throws IOException {
         try {
             String targetPath = saveToPath + url.getPath().replace('/', '_');
-            Files.write(Paths.get(targetPath), asset.getBytes());
+            Files.write(Paths.get(targetPath), asset.getBytes(Charset.forName("UTF-8")));
         } catch (IOException e) {
-            logger.error(String.format("Error when saving an asset: %s\n", e.getMessage()));
+            logger.error(String.format("Error when saving an asset: %s%n", e.getMessage()));
             throw e;
         }
     }
 
-    private Optional<URL> validateUrl(URL url, String foundUrl) {
+    private Optional<URI> validateUrl(URI url, String foundUrl) {
         if (!foundUrl.startsWith("http")) {
             foundUrl = "http://" + url.getHost() + url.getPath().substring(0, url.getPath().lastIndexOf('/') + 1) + foundUrl;
         }
 
         try {
-            URL u = new URL(foundUrl);
+            URI u = new URI(foundUrl);
             return !u.getPath().equals("/") && u.getHost().equals(url.getHost()) ? Optional.of(u) : Optional.empty();
-        } catch (MalformedURLException e) {
+        } catch (URISyntaxException e) {
             return Optional.empty();
         }
     }
